feat: weni announcement

--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -139,6 +139,17 @@
 {% block body %}
 
 %body#pageBody.bg-gradient
+
+  .weni-announcement.h-24
+    .flex.flex-row.justify-center
+      .weni-left
+        Ilhasoft, Push e BotHub agora são Weni.
+      .weni-divider
+      .weni-right
+        A partir dessa fusão, nosso propósito é continuar evoluindo a transformação digital na comunicação das organizações.
+      %a.weni-button(href="https://ilhasoft.com.br/somos-weni")
+        Saiba mais
+
   -include "components-body.html"
 
   -block temba-store
