--- a/templates/includes/nav.haml
+++ b/templates/includes/nav.haml
@@ -223,7 +223,7 @@
 
   -if not request.user.is_anonymous
     .more
-      %a.icon-menu-4{href:""}
+      %a.icon-menu-4{href:"#"}
       .submenu-container.hide
         .submenu
 
