messaging_passive becomes messaging_background

--- a/templates/flows/flow_create.haml
+++ b/templates/flows/flow_create.haml
@@ -29,7 +29,7 @@
     
     typeSelect.addEventListener("change", function(evt) {
         var selected = evt.target.values[0];
-        if (selected.value === "P" || selected.value === "S") {
+        if (selected.value === "B" || selected.value === "S") {
           keywords.classList.add("hidden");
         } else {
           keywords.classList.remove("hidden");
