--- a/templates/smartmin/users/user_forget.haml
+++ b/templates/smartmin/users/user_forget.haml
@@ -13,4 +13,26 @@
   %form.mt-8(method="post" action="{% url 'users.user_forget' %}")
     {% csrf_token %}
     %temba-textinput(type="email" name="email" required="" placeholder='{{_("Email Address")|escapejs}}')
+    #recaptcha{style:"margin: 10px 0"}
     %input.mt-4.button-primary(type="submit" value='{{_("Reset Password")}}')
+
+-block extra-script
+  %script{src:"https://www.google.com/recaptcha/api.js?render={{ recaptcha_secrete_key }}"}
+  %script
+    $(document).ready(function() {
+      $('form[action="/users/user/forget/"]').attr('onsubmit', 'return validateRecaptcha();');
+      var fieldset = document.getElementsByTagName('fieldset');
+      var recaptcha = document.createElement('div');
+      recaptcha.setAttribute('id', 'recaptcha');
+      fieldset[0].appendChild(recaptcha);
+    });
+
+    function validateRecaptcha() {
+      const response = grecaptcha.getResponse();
+      return response.length !== 0;
+    }
+    grecaptcha.ready(() => {
+      grecaptcha.render('recaptcha', {
+        'sitekey': '{{ recaptcha_site_key }}'
+      });
+    });
