--- a/templates/flows/flow_editor.haml
+++ b/templates/flows/flow_editor.haml
@@ -198,6 +198,12 @@
       right: -78px;
     }
 
+    [class*="React"]
+
+    [class*="Flow_empty_flow"] {
+      margin: 60px 30px 0 24px;
+    }
+
 -block extra-script
   {{ block.super }}
 
