--- a/templates/flows/flow_editor.haml
+++ b/templates/flows/flow_editor.haml
@@ -207,7 +207,7 @@
     }
 
     [class*="Flow_empty_flow"] {
-      margin: 60px 30px 0 24px;
+      margin: 60px 30px 0 24px !important;
     }
 
 -block extra-script
