Changed paginator on messages list to general one

--- a/templates/msgs/broadcast_schedule_list.haml
+++ b/templates/msgs/broadcast_schedule_list.haml
@@ -41,7 +41,7 @@
   - block paginator
     -if object_list.count
       .paginator
-        -include "smartmin/sidebar_pagination.haml"
+        -include "includes/pagination.haml"
 
 
 -block extra-less
