--- a/templates/msgs/msg_outbox.haml
+++ b/templates/msgs/msg_outbox.haml
@@ -68,7 +68,7 @@
   -block paginator
     -if object_list.count
       .paginator
-        -include "smartmin/sidebar_pagination.haml"
+        -include "includes/pagination.haml"
 
 -block extra-style
   {{ block.super }}
