Changed group membership label according to new GUI

--- a/templates/contacts/contact_list.haml
+++ b/templates/contacts/contact_list.haml
@@ -247,7 +247,7 @@
                                   'class': "{% if not forloop.first %}hidden_group{% endif %}",
                                   'style': "text-decoration: none;"
                                 }
-                                  %span.label.label-info.lbl
+                                  %span.lbl.linked.mb-2.ml-2
                                     {{ group.name }}
 
                       %td.w-full
